# oz_django6

./: pyproject.toml
.github/workflows/: ci.yml
oz_django6/: settings.py  urls.py
tabom/: models.py
tabom/apis/v1/: like_router.py
tabom/services/: like_service.py
tabom/tests/: test_article_service.py  test_like_service.py
