[tool.poetry]
name = "oz-django6"
version = "0.1.0"
description = ""
authors = ["SW <aliwo@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
